[gd_scene load_steps=4 format=2]

[ext_resource path="res://hud/system/fleet/fleet_item.gd" type="Script" id=1]
[ext_resource path="res://themes/theme_main_square_button.tres" type="Theme" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/picto_flotte_2.png-7690f89049c3d62083c913b47bdc6ade.stex"

[node name="FleetItem" type="PanelContainer"]
anchor_right = 0.15625
anchor_bottom = 0.0972222
rect_min_size = Vector2( 70, 70 )
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 20.0
margin_right = 298.0
margin_bottom = 83.0
size_flags_vertical = 4

[node name="Player" type="Label" parent="Container"]
margin_right = 296.0
margin_bottom = 19.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Container"]
margin_top = 23.0
margin_right = 296.0
margin_bottom = 27.0

[node name="Ships" type="HBoxContainer" parent="Container"]
margin_top = 31.0
margin_right = 296.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picto" type="TextureRect" parent="Container/Ships"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="NbShips" type="Label" parent="Container/Ships"]
margin_left = 36.0
margin_top = 6.0
margin_right = 103.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
align = 2

[node name="ButtonMenu" type="Button" parent="Container/Ships"]
margin_left = 107.0
margin_top = 1.0
margin_right = 296.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 4
text = "hud.fleet_item.open_menu"
